--- a/1_Src/2_Embedding/embedding.ipynb
+++ b/1_Src/2_Embedding/embedding.ipynb
@@ -4,53 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔢 Data FlowsEmbedding\n",
-    "\n",
-    "Generate Data Flows Embedding using different models.\n",
-    "\n",
-    "1. GPT Embedding Model by OpenAI\n",
-    "2. CodeBert\n",
-    "3. SfrMistral"
+    "## 🔢 Description Embedding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "from   dotenv   import load_dotenv\n",
     "import pandas   as pd\n",
-    "import itertools\n",
     "import datetime\n",
-    "import json\n",
     "import sys\n",
     "import os\n",
     "\n",
     "# Add the upper folder to sys.path\n",
-    "sys.path.insert(0, \"../../\")\n",
-    "from   RedisClient import RedisClient\n",
-    "from   App         import App\n",
-    "from   App         import DataFlows\n",
-    "from   Embedding   import EmbeddingsManager"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TMP Folder\n",
-    "TMP_PATH = \"../../../../0_Data/TMP/\""
+    "import LLMUtils\n",
+    "import Preprocessing"
    ]
   },
   {
@@ -62,26 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚡ Start - 2024-07-20 13:34:10.436099 ⚡\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"⚡ Start - {} ⚡\\n\".format(datetime.datetime.now()))\n",
     "startTime = datetime.datetime.now()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create TMP Folder\n",
-    "if not os.path.exists(TMP_PATH):\n",
-    "\tos.makedirs(TMP_PATH)\n",
-    "\tprint(\"📁🆕 Folder created       :\", TMP_PATH)\n",
-    "else:\n",
-    "\tprint(\"📁✅ Folder already exists:\", TMP_PATH)"
    ]
   },
   {
@@ -93,69 +60,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- #️⃣ Apps: 2 \n"
+     ]
+    }
+   ],
    "source": [
-    "# Datasets\n",
-    "#DATASET = \"0_AndroCatSet\"\n",
-    "#DATASET = \"1_AndroCatSetMini\"\n",
-    "DATASET = \"2_AndroCatSetTestSet\"\n",
-    "#DATASET = \"3_MalCatSet\"\n",
-    "#DATASET = \"4_Mudflow\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "📡 Redis Connection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load .env file\n",
-    "load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if DATASET in [\"0_AndroCatSet\", \"1_AndroCatSetMini\", \"2_AndroCatSetTestSet\"]: \n",
-    "\tREDIS_PROJECT_KEY = \"marco.dataflow.extraction.androcatset.backward.pairs\"\n",
-    "\t\n",
-    "if DATASET == \"3_MalCatSet\": \n",
-    "\tREDIS_PROJECT_KEY = \"marco.dataflow.extraction.malcatsetall.backward.pairs\"\n",
-    "\n",
-    "if DATASET == \"4_Mudflow\": \n",
-    "\tREDIS_PROJECT_KEY = \"marco.dataflow.extraction.mudflowall.backward.pairs\"\n",
-    "\n",
-    "redisClientExtraction = RedisClient(host=os.getenv(\"REDIS_SERVER\"), port=os.getenv(\"REDIS_PORT\"), db=os.getenv(\"REDIS_DB\"), password=os.getenv(\"REDIS_PSW\"), projectKey = REDIS_PROJECT_KEY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_PATH = \"../../../../0_Data/{}.csv\".format(DATASET) \n",
+    "DATA_PATH = \"../../0_Data/0_AndroCatSet.csv\"\n",
     "\n",
     "# Read the data\n",
     "appsDF = pd.read_csv(DATA_PATH)\n",
-    "\n",
-    "# Print Number\n",
-    "print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))\n",
+    "appsDF = appsDF.drop(columns=['googlePlayCategoryID'])\n",
     "\n",
     "# TEST\n",
-    "appsDF = appsDF.head(10)\n",
+    "appsDF = appsDF.head(2)\n",
+    "\n",
+    "print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sha256</th>\n",
+       "      <th>pkgName</th>\n",
+       "      <th>classID</th>\n",
+       "      <th>googlePlayDescription</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...</td>\n",
+       "      <td>my.android.calc</td>\n",
+       "      <td>Calculator</td>\n",
+       "      <td>Handiness universal percentage calculator for ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...</td>\n",
+       "      <td>com.vpn.basiccalculator</td>\n",
+       "      <td>Calculator</td>\n",
+       "      <td>CITIZEN CALCULATOR by ANGEL NX is best Mobile ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              sha256                  pkgName  \\\n",
+       "0  9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...          my.android.calc   \n",
+       "1  686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...  com.vpn.basiccalculator   \n",
+       "\n",
+       "      classID                              googlePlayDescription  \n",
+       "0  Calculator  Handiness universal percentage calculator for ...  \n",
+       "1  Calculator  CITIZEN CALCULATOR by ANGEL NX is best Mobile ...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "appsDF.head(5)"
    ]
   },
@@ -163,7 +158,181 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 🔢 2) Load Apps and Generate Numerical Embeddings"
+    "#### 🔢 2) Preprocess Description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sha256</th>\n",
+       "      <th>pkgName</th>\n",
+       "      <th>classID</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...</td>\n",
+       "      <td>my.android.calc</td>\n",
+       "      <td>Calculator</td>\n",
+       "      <td>handiness universal percentage calculator simp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...</td>\n",
+       "      <td>com.vpn.basiccalculator</td>\n",
+       "      <td>Calculator</td>\n",
+       "      <td>citizen calculator angel best mobile app world...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              sha256                  pkgName  \\\n",
+       "0  9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...          my.android.calc   \n",
+       "1  686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...  com.vpn.basiccalculator   \n",
+       "\n",
+       "      classID                                        description  \n",
+       "0  Calculator  handiness universal percentage calculator simp...  \n",
+       "1  Calculator  citizen calculator angel best mobile app world...  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "appsDF['description'] = appsDF['googlePlayDescription'].apply(Preprocessing.preprocessDescription)\n",
+    "appsDF = appsDF.drop(columns=['googlePlayDescription'])\n",
+    "appsDF.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 🔢 3) Generate Numerical Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gptManager = LLMUtils.GptManager()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "appsDF['embedding'] = appsDF['description'].apply(gptManager.generateEmbedding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sha256</th>\n",
+       "      <th>pkgName</th>\n",
+       "      <th>classID</th>\n",
+       "      <th>description</th>\n",
+       "      <th>embedding</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...</td>\n",
+       "      <td>my.android.calc</td>\n",
+       "      <td>Calculator</td>\n",
+       "      <td>handiness universal percentage calculator simp...</td>\n",
+       "      <td>[0.00022729640477336943, -0.003907090984284878...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...</td>\n",
+       "      <td>com.vpn.basiccalculator</td>\n",
+       "      <td>Calculator</td>\n",
+       "      <td>citizen calculator angel best mobile app world...</td>\n",
+       "      <td>[-0.0048510185442864895, -0.005108269397169352...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              sha256                  pkgName  \\\n",
+       "0  9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...          my.android.calc   \n",
+       "1  686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...  com.vpn.basiccalculator   \n",
+       "\n",
+       "      classID                                        description  \\\n",
+       "0  Calculator  handiness universal percentage calculator simp...   \n",
+       "1  Calculator  citizen calculator angel best mobile app world...   \n",
+       "\n",
+       "                                           embedding  \n",
+       "0  [0.00022729640477336943, -0.003907090984284878...  \n",
+       "1  [-0.0048510185442864895, -0.005108269397169352...  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "appsDF"
    ]
   },
   {
@@ -172,89 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EMBEDDING_MODEL = \"gpt\"\n",
-    "#EMBEDDING_MODEL = \"codebert\"\n",
-    "#EMBEDDING_MODEL = \"sfr\"\n",
-    "\n",
-    "#EMBEDDING_SCHEMA = \"onlysignatures\"\n",
-    "EMBEDDING_SCHEMA = \"fullstatements\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if EMBEDDING_SCHEMA == \"onlysignatures\":\n",
-    "\tredisClientEmbedding  = RedisClient(host=os.getenv(\"REDIS_SERVER\"), \n",
-    "\t\t\t\t\t\t\t\t\tport=os.getenv(\"REDIS_PORT\"), \n",
-    "\t\t\t\t\t\t\t\t\tdb=os.getenv(\"REDIS_DB\"), \n",
-    "\t\t\t\t\t\t\t\t\tpassword=os.getenv(\"REDIS_PSW\"), \n",
-    "\t\t\t\t\t\t\t\t\tprojectKey = \"marco.dataflow.embedding.onlysignatures\")\n",
-    "\t\t\t\n",
-    "if EMBEDDING_SCHEMA== \"fullstatements\":\n",
-    "\tredisClientEmbedding  = RedisClient(host=os.getenv(\"REDIS_SERVER\"), \n",
-    "\t\t\t\t\t\t\t\t\tport=os.getenv(\"REDIS_PORT\"), \n",
-    "\t\t\t\t\t\t\t\t\tdb=os.getenv(\"REDIS_DB\"), \n",
-    "\t\t\t\t\t\t\t\t\tpassword=os.getenv(\"REDIS_PSW\"), \n",
-    "\t\t\t\t\t\t\t\t\tprojectKey = \"marco.dataflow.embedding.fullstatements\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create an Embedding Manager\n",
-    "embeddingsManager = EmbeddingsManager(redisClientEmbedding, EMBEDDING_MODEL)\n",
-    "print(embeddingsManager)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def processRow(row):\n",
-    "\t\t# Print message \n",
-    "\t\tprint(\"\\n--- 🔑 Analyzing APK: {} 🔑 ---\".format(row['sha256']))\n",
-    "\n",
-    "\t\t# Create App instance\n",
-    "\t\tapp = App(row['sha256'], row['pkgName'], row['classID'])\n",
-    "\n",
-    "\t\t# Download Data Flows from Redis\n",
-    "\t\tapp.downloadDataFlowsFromRedis(redisClientExtraction)\n",
-    "\t\t\n",
-    "\t\t# Check if dataFlows have been extracted and are not empty.\n",
-    "\t\tif(app.dataFlows is not None and not app.dataFlows.isEmpty()):\n",
-    "\t\t\t\t\n",
-    "\t\t\t\t# Keep only signature\n",
-    "\t\t\t\tif EMBEDDING_SCHEMA == \"onlysignatures\":\n",
-    "\t\t\t\t\tapp.dataFlows.keepOnlySignatures()\n",
-    "\t\t\t\t\t\n",
-    "\t\t\t\t# Load DataFlows into Embeddings Manager\n",
-    "\t\t\t\tembeddingsManager.loadDataFlowsFromApp(app.dataFlows)\n",
-    "\n",
-    "# Apply the function to each row in the DataFrame\n",
-    "_ = appsDF.apply(processRow, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(embeddingsManager)\n",
-    "\n",
-    "embeddingsManager.generateMethodsEmbeddings(redisClientEmbedding, EMBEDDING_MODEL)\n",
-    "\n",
-    "print(embeddingsManager)\n",
-    "if embeddingsManager.shape == 0:\n",
-    "\tprint(\"--- ⏭️ No NEW EMBEDDINGS Generated\")"
+    "appsDF.to_csv(\"./TmpData/0_AndroCatEmbeddings.csv\", index=false)"
    ]
   },
   {
@@ -268,7 +355,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔚 --- End - 2024-07-20 13:31:36.494204 --- 🔚\n",
+      "⏱️ --- Time: 00 minutes and 01 seconds --- ⏱️\n"
+     ]
+    }
+   ],
    "source": [
     "endTime = datetime.datetime.now()\n",
     "print(\"\\n🔚 --- End - {} --- 🔚\".format(endTime))\n",
@@ -297,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
