--- a/1_Src/2_Embedding/embedding.ipynb
+++ b/1_Src/2_Embedding/embedding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚡ Start - 2024-07-20 13:34:10.436099 ⚡\n",
+      "⚡ Start - 2024-07-20 13:35:57.923638 ⚡\n",
       "\n"
      ]
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "1  Calculator  CITIZEN CALCULATOR by ANGEL NX is best Mobile ...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "1  Calculator  citizen calculator angel best mobile app world...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,106 +242,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# To interact with ChatGPT\n",
     "gptManager = LLMUtils.GptManager()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "appsDF['embedding'] = appsDF['description'].apply(gptManager.generateEmbedding)"
+    "# Generate Embeddings\n",
+    "appsDF['embedding'] = appsDF['description'].apply(gptManager.generateEmbedding)\n",
+    "appsDF.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔢 4) Save into CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sha256</th>\n",
-       "      <th>pkgName</th>\n",
-       "      <th>classID</th>\n",
-       "      <th>description</th>\n",
-       "      <th>embedding</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...</td>\n",
-       "      <td>my.android.calc</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>handiness universal percentage calculator simp...</td>\n",
-       "      <td>[0.00022729640477336943, -0.003907090984284878...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...</td>\n",
-       "      <td>com.vpn.basiccalculator</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>citizen calculator angel best mobile app world...</td>\n",
-       "      <td>[-0.0048510185442864895, -0.005108269397169352...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              sha256                  pkgName  \\\n",
-       "0  9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...          my.android.calc   \n",
-       "1  686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...  com.vpn.basiccalculator   \n",
-       "\n",
-       "      classID                                        description  \\\n",
-       "0  Calculator  handiness universal percentage calculator simp...   \n",
-       "1  Calculator  citizen calculator angel best mobile app world...   \n",
-       "\n",
-       "                                           embedding  \n",
-       "0  [0.00022729640477336943, -0.003907090984284878...  \n",
-       "1  [-0.0048510185442864895, -0.005108269397169352...  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "appsDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "appsDF.to_csv(\"./TmpData/0_AndroCatEmbeddings.csv\", index=false)"
+    "appsDF.to_csv(\"../TmpData/0_AndroCatEmbeddings.csv\", index=False)"
    ]
   },
   {
