--- a/1_Src/2_Embedding/embedding.ipynb
+++ b/1_Src/2_Embedding/embedding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⚡ Start - 2024-07-20 13:35:57.923638 ⚡\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"⚡ Start - {} ⚡\\n\".format(datetime.datetime.now()))\n",
     "startTime = datetime.datetime.now()"
@@ -60,96 +51,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- #️⃣ Apps: 2 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "DATA_PATH = \"../../0_Data/0_AndroCatSet.csv\"\n",
+    "#DATA_PATH = \"../../0_Data/0_AndroCatSet.csv\"\n",
+    "DATA_PATH = \"../../0_Data/1_AndroCatSetMini.csv\"\n",
     "\n",
     "# Read the data\n",
     "appsDF = pd.read_csv(DATA_PATH)\n",
     "appsDF = appsDF.drop(columns=['googlePlayCategoryID'])\n",
     "\n",
     "# TEST\n",
-    "appsDF = appsDF.head(2)\n",
+    "#appsDF = appsDF.head(2)\n",
     "\n",
     "print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sha256</th>\n",
-       "      <th>pkgName</th>\n",
-       "      <th>classID</th>\n",
-       "      <th>googlePlayDescription</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...</td>\n",
-       "      <td>my.android.calc</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>Handiness universal percentage calculator for ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...</td>\n",
-       "      <td>com.vpn.basiccalculator</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>CITIZEN CALCULATOR by ANGEL NX is best Mobile ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              sha256                  pkgName  \\\n",
-       "0  9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...          my.android.calc   \n",
-       "1  686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...  com.vpn.basiccalculator   \n",
-       "\n",
-       "      classID                              googlePlayDescription  \n",
-       "0  Calculator  Handiness universal percentage calculator for ...  \n",
-       "1  Calculator  CITIZEN CALCULATOR by ANGEL NX is best Mobile ...  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "appsDF.head(5)"
    ]
@@ -163,70 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sha256</th>\n",
-       "      <th>pkgName</th>\n",
-       "      <th>classID</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...</td>\n",
-       "      <td>my.android.calc</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>handiness universal percentage calculator simp...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...</td>\n",
-       "      <td>com.vpn.basiccalculator</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>citizen calculator angel best mobile app world...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              sha256                  pkgName  \\\n",
-       "0  9B30837BD2474AC3623A43D052F7ADC4C63E4AA9981F0F...          my.android.calc   \n",
-       "1  686DE8D8A0D08992CB135BC7A0500D0109D9697A1140B8...  com.vpn.basiccalculator   \n",
-       "\n",
-       "      classID                                        description  \n",
-       "0  Calculator  handiness universal percentage calculator simp...  \n",
-       "1  Calculator  citizen calculator angel best mobile app world...  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "appsDF['description'] = appsDF['googlePlayDescription'].apply(Preprocessing.preprocessDescription)\n",
     "appsDF = appsDF.drop(columns=['googlePlayDescription'])\n",
@@ -242,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,14 +113,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ Pay here"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate Embeddings\n",
-    "appsDF['embedding'] = appsDF['description'].apply(gptManager.generateEmbedding)\n",
-    "appsDF.head(5)"
+    "# # Generate Embeddings\n",
+    "# appsDF['embedding'] = appsDF['description'].apply(gptManager.generateEmbedding)\n",
+    "# appsDF.head(5)"
    ]
   },
   {
@@ -270,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,17 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "🔚 --- End - 2024-07-20 13:31:36.494204 --- 🔚\n",
-      "⏱️ --- Time: 00 minutes and 01 seconds --- ⏱️\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "endTime = datetime.datetime.now()\n",
     "print(\"\\n🔚 --- End - {} --- 🔚\".format(endTime))\n",
