UPDATE: DescripitoN Crawler

--- a/1_Src/3_Classification/classification.ipynb
+++ b/1_Src/3_Classification/classification.ipynb
@@ -947,13 +947,113 @@
       "------ Recall (weighted)     : 0.6217\n",
       "------ F1 Score (weighted)   : 0.6217\n",
       "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 0.55\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : 0.6227\n",
+      "------ Precision (weighted)  : 0.6207\n",
+      "------ Recall (weighted)     : 0.6227\n",
+      "------ F1 Score (weighted)   : 0.6217\n",
+      "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 0.60\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : 0.6152\n",
+      "------ Precision (weighted)  : 0.6132\n",
+      "------ Recall (weighted)     : 0.6152\n",
+      "------ F1 Score (weighted)   : 0.6141\n",
+      "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 0.65\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : 0.6198\n",
+      "------ Precision (weighted)  : 0.6176\n",
+      "------ Recall (weighted)     : 0.6198\n",
+      "------ F1 Score (weighted)   : 0.6186\n",
+      "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 0.70\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : 0.6110\n",
+      "------ Precision (weighted)  : 0.6087\n",
+      "------ Recall (weighted)     : 0.6110\n",
+      "------ F1 Score (weighted)   : 0.6098\n",
+      "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 0.75\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : 0.6023\n",
+      "------ Precision (weighted)  : 0.6023\n",
+      "------ Recall (weighted)     : 0.6023\n",
+      "------ F1 Score (weighted)   : 0.6023\n",
+      "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 0.80\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : 0.6165\n",
+      "------ Precision (weighted)  : 0.6165\n",
+      "------ Recall (weighted)     : 0.6165\n",
+      "------ F1 Score (weighted)   : 0.6165\n",
+      "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 0.85\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : 0.6355\n",
+      "------ Precision (weighted)  : 0.6355\n",
+      "------ Recall (weighted)     : 0.6355\n",
+      "------ F1 Score (weighted)   : 0.6355\n",
+      "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 0.90\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : 0.6000\n",
+      "------ Precision (weighted)  : 0.6000\n",
+      "------ Recall (weighted)     : 0.6000\n",
+      "------ F1 Score (weighted)   : 0.6000\n",
+      "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 0.95\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : 0.7143\n",
+      "------ Precision (weighted)  : 0.7143\n",
+      "------ Recall (weighted)     : 0.7143\n",
+      "------ F1 Score (weighted)   : 0.7143\n",
+      "----------------------------------------\n",
+      "\n",
+      "--- 📊 Model Evaluation Metrics 📊 ---\n",
+      "--- Model                    : svm\n",
+      "--- Confidence Threshold     : 1.00\n",
+      "--- Metrics:\n",
+      "------ Accuracy              : nan\n",
+      "------ Precision (weighted)  : nan\n",
+      "------ Recall (weighted)     : nan\n",
+      "------ F1 Score (weighted)   : nan\n",
+      "----------------------------------------\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Define a range of confidence thresholds\n",
-    "thresholds = [i/100 for i in range(50, 101, 5)]\n",
+    "thresholds = [i/100 for i in range(50, 100, 5)]\n",
     "\n",
     "# Get prediction probabilities\n",
     "probabilities = model.predict_proba(X_test)\n",
