--- a/1_Src/3_Classification/classification.ipynb
+++ b/1_Src/3_Classification/classification.ipynb
@@ -20,13 +20,11 @@
     "from sklearn.linear_model          import LogisticRegression\n",
     "from sklearn                       import svm\n",
     "from dotenv                        import load_dotenv\n",
-    "import xgboost                     as xgb\n",
     "import pandas                      as pd\n",
     "import numpy                       as np\n",
     "import datetime\n",
     "import ast\n",
-    "import os\n",
-    "import sys\n",
+    "\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -57,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚡ Start - 2024-07-20 15:53:39.103271 ⚡\n",
+      "⚡ Start - 2024-07-20 16:54:34.379859 ⚡\n",
       "\n"
      ]
     }
@@ -392,7 +390,7 @@
       "--- 📐 X Shape : (5000, 1536)\n",
       "--- 📐 Y Shape : 5000\n",
       "[10 10 10 ... 41 41 41]\n",
-      "No Class Value: 30\n"
+      "NO_CLASS Special Value: 30\n"
      ]
     }
    ],
@@ -413,10 +411,10 @@
     "print(Y_True)\n",
     "\n",
     "NO_CLASS_VALUE = labelEncoder.transform([\"NO_CLASS\"])[0]\n",
-    "print(\"No Class Value:\", NO_CLASS_VALUE)\n",
+    "print(\"NO_CLASS Special Value:\", NO_CLASS_VALUE)\n",
     "\n",
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y_True, test_size=0.1, random_state = RANDOM_SEED)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y_True, test_size=0.2, random_state = RANDOM_SEED)"
    ]
   },
   {
@@ -838,10 +836,10 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC(C=1, kernel=&#x27;linear&#x27;, probability=True)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;SVC<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.svm.SVC.html\">?<span>Documentation for SVC</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>SVC(C=1, kernel=&#x27;linear&#x27;, probability=True)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC(C=1, gamma=1, kernel=&#x27;sigmoid&#x27;, probability=True)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;SVC<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.svm.SVC.html\">?<span>Documentation for SVC</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>SVC(C=1, gamma=1, kernel=&#x27;sigmoid&#x27;, probability=True)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "SVC(C=1, kernel='linear', probability=True)"
+       "SVC(C=1, gamma=1, kernel='sigmoid', probability=True)"
       ]
      },
      "execution_count": 10,
@@ -851,7 +849,8 @@
    ],
    "source": [
     "modelName = 'svm'\n",
-    "model     = svm.SVC(kernel='linear', C=1, probability=True)\n",
+    "#model     = svm.SVC(kernel='linear', C=1, probability=True)\n",
+    "model     = svm.SVC(kernel='sigmoid', C=1, gamma=1 , probability= True)\n",
     "\n",
     "print(\"--- 🦾 Training model: {}\".format(modelName))\n",
     "model.fit(X_train, Y_train)"
@@ -931,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -942,110 +941,100 @@
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.50\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.6217\n",
-      "------ Precision (weighted)  : 0.6217\n",
-      "------ Recall (weighted)     : 0.6217\n",
-      "------ F1 Score (weighted)   : 0.6217\n",
+      "------ Accuracy              : 0.6104\n",
+      "------ Precision (weighted)  : 0.6116\n",
+      "------ Recall (weighted)     : 0.6104\n",
+      "------ F1 Score (weighted)   : 0.6109\n",
       "----------------------------------------\n",
       "\n",
       "--- 📊 Model Evaluation Metrics 📊 ---\n",
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.55\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.6227\n",
-      "------ Precision (weighted)  : 0.6207\n",
-      "------ Recall (weighted)     : 0.6227\n",
-      "------ F1 Score (weighted)   : 0.6217\n",
+      "------ Accuracy              : 0.6093\n",
+      "------ Precision (weighted)  : 0.6105\n",
+      "------ Recall (weighted)     : 0.6093\n",
+      "------ F1 Score (weighted)   : 0.6099\n",
       "----------------------------------------\n",
       "\n",
       "--- 📊 Model Evaluation Metrics 📊 ---\n",
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.60\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.6152\n",
-      "------ Precision (weighted)  : 0.6132\n",
-      "------ Recall (weighted)     : 0.6152\n",
-      "------ F1 Score (weighted)   : 0.6141\n",
+      "------ Accuracy              : 0.6100\n",
+      "------ Precision (weighted)  : 0.6101\n",
+      "------ Recall (weighted)     : 0.6100\n",
+      "------ F1 Score (weighted)   : 0.6100\n",
       "----------------------------------------\n",
       "\n",
       "--- 📊 Model Evaluation Metrics 📊 ---\n",
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.65\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.6198\n",
-      "------ Precision (weighted)  : 0.6176\n",
-      "------ Recall (weighted)     : 0.6198\n",
-      "------ F1 Score (weighted)   : 0.6186\n",
+      "------ Accuracy              : 0.6097\n",
+      "------ Precision (weighted)  : 0.6097\n",
+      "------ Recall (weighted)     : 0.6097\n",
+      "------ F1 Score (weighted)   : 0.6097\n",
       "----------------------------------------\n",
       "\n",
       "--- 📊 Model Evaluation Metrics 📊 ---\n",
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.70\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.6110\n",
-      "------ Precision (weighted)  : 0.6087\n",
-      "------ Recall (weighted)     : 0.6110\n",
-      "------ F1 Score (weighted)   : 0.6098\n",
+      "------ Accuracy              : 0.6035\n",
+      "------ Precision (weighted)  : 0.6035\n",
+      "------ Recall (weighted)     : 0.6035\n",
+      "------ F1 Score (weighted)   : 0.6035\n",
       "----------------------------------------\n",
       "\n",
       "--- 📊 Model Evaluation Metrics 📊 ---\n",
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.75\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.6023\n",
-      "------ Precision (weighted)  : 0.6023\n",
-      "------ Recall (weighted)     : 0.6023\n",
-      "------ F1 Score (weighted)   : 0.6023\n",
+      "------ Accuracy              : 0.5905\n",
+      "------ Precision (weighted)  : 0.5905\n",
+      "------ Recall (weighted)     : 0.5905\n",
+      "------ F1 Score (weighted)   : 0.5905\n",
       "----------------------------------------\n",
       "\n",
       "--- 📊 Model Evaluation Metrics 📊 ---\n",
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.80\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.6165\n",
-      "------ Precision (weighted)  : 0.6165\n",
-      "------ Recall (weighted)     : 0.6165\n",
-      "------ F1 Score (weighted)   : 0.6165\n",
+      "------ Accuracy              : 0.5802\n",
+      "------ Precision (weighted)  : 0.5802\n",
+      "------ Recall (weighted)     : 0.5802\n",
+      "------ F1 Score (weighted)   : 0.5802\n",
       "----------------------------------------\n",
       "\n",
       "--- 📊 Model Evaluation Metrics 📊 ---\n",
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.85\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.6355\n",
-      "------ Precision (weighted)  : 0.6355\n",
-      "------ Recall (weighted)     : 0.6355\n",
-      "------ F1 Score (weighted)   : 0.6355\n",
+      "------ Accuracy              : 0.5836\n",
+      "------ Precision (weighted)  : 0.5836\n",
+      "------ Recall (weighted)     : 0.5836\n",
+      "------ F1 Score (weighted)   : 0.5836\n",
       "----------------------------------------\n",
       "\n",
       "--- 📊 Model Evaluation Metrics 📊 ---\n",
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.90\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.6000\n",
-      "------ Precision (weighted)  : 0.6000\n",
-      "------ Recall (weighted)     : 0.6000\n",
-      "------ F1 Score (weighted)   : 0.6000\n",
+      "------ Accuracy              : 0.5855\n",
+      "------ Precision (weighted)  : 0.5855\n",
+      "------ Recall (weighted)     : 0.5855\n",
+      "------ F1 Score (weighted)   : 0.5855\n",
       "----------------------------------------\n",
       "\n",
       "--- 📊 Model Evaluation Metrics 📊 ---\n",
       "--- Model                    : svm\n",
       "--- Confidence Threshold     : 0.95\n",
       "--- Metrics:\n",
-      "------ Accuracy              : 0.7143\n",
-      "------ Precision (weighted)  : 0.7143\n",
-      "------ Recall (weighted)     : 0.7143\n",
-      "------ F1 Score (weighted)   : 0.7143\n",
-      "----------------------------------------\n",
-      "\n",
-      "--- 📊 Model Evaluation Metrics 📊 ---\n",
-      "--- Model                    : svm\n",
-      "--- Confidence Threshold     : 1.00\n",
-      "--- Metrics:\n",
-      "------ Accuracy              : nan\n",
-      "------ Precision (weighted)  : nan\n",
-      "------ Recall (weighted)     : nan\n",
-      "------ F1 Score (weighted)   : nan\n",
+      "------ Accuracy              : 0.5789\n",
+      "------ Precision (weighted)  : 0.5789\n",
+      "------ Recall (weighted)     : 0.5789\n",
+      "------ F1 Score (weighted)   : 0.5789\n",
       "----------------------------------------\n",
       "\n"
      ]
@@ -1144,9 +1133,9 @@
        "      <td>Calculator</td>\n",
        "      <td>Calculator</td>\n",
        "      <td>Calculator</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>Calculator</td>\n",
+       "      <td>NO_CLASS</td>\n",
+       "      <td>NO_CLASS</td>\n",
+       "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
@@ -1184,7 +1173,7 @@
        "      <td>Calculator</td>\n",
        "      <td>Calculator</td>\n",
        "      <td>Calculator</td>\n",
-       "      <td>Calculator</td>\n",
+       "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
@@ -1200,9 +1189,9 @@
        "      <td>Calculator</td>\n",
        "      <td>Calculator</td>\n",
        "      <td>Calculator</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>Calculator</td>\n",
-       "      <td>Calculator</td>\n",
+       "      <td>NO_CLASS</td>\n",
+       "      <td>NO_CLASS</td>\n",
+       "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
@@ -1219,7 +1208,7 @@
        "      <td>Calculator</td>\n",
        "      <td>Calculator</td>\n",
        "      <td>Calculator</td>\n",
-       "      <td>Calculator</td>\n",
+       "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
        "      <td>NO_CLASS</td>\n",
@@ -1258,12 +1247,12 @@
        "3  [0.01341024786233902, -0.0020422476809471846, ...  Calculator  Calculator   \n",
        "4  [-0.014099321328103542, 0.0014035949716344476,...  Calculator  Calculator   \n",
        "\n",
-       "      svm0.55      svm0.6     svm0.65      svm0.7     svm0.75      svm0.8  \\\n",
-       "0  Calculator  Calculator  Calculator  Calculator    NO_CLASS    NO_CLASS   \n",
-       "1    NO_CLASS    NO_CLASS    NO_CLASS    NO_CLASS    NO_CLASS    NO_CLASS   \n",
-       "2  Calculator  Calculator  Calculator  Calculator  Calculator  Calculator   \n",
-       "3  Calculator  Calculator  Calculator  Calculator  Calculator  Calculator   \n",
-       "4  Calculator  Calculator  Calculator  Calculator  Calculator    NO_CLASS   \n",
+       "      svm0.55      svm0.6     svm0.65      svm0.7     svm0.75    svm0.8  \\\n",
+       "0  Calculator    NO_CLASS    NO_CLASS    NO_CLASS    NO_CLASS  NO_CLASS   \n",
+       "1    NO_CLASS    NO_CLASS    NO_CLASS    NO_CLASS    NO_CLASS  NO_CLASS   \n",
+       "2  Calculator  Calculator  Calculator  Calculator  Calculator  NO_CLASS   \n",
+       "3  Calculator  Calculator  Calculator    NO_CLASS    NO_CLASS  NO_CLASS   \n",
+       "4  Calculator  Calculator  Calculator  Calculator    NO_CLASS  NO_CLASS   \n",
        "\n",
        "    svm0.85    svm0.9   svm0.95  \n",
        "0  NO_CLASS  NO_CLASS  NO_CLASS  \n",
@@ -1309,8 +1298,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔚 --- End - 2024-07-20 15:55:27.295846 --- 🔚\n",
-      "⏱️ --- Time: 01 minutes and 48 seconds --- ⏱️\n"
+      "🔚 --- End - 2024-07-20 17:03:42.464475 --- 🔚\n",
+      "⏱️ --- Time: 09 minutes and 08 seconds --- ⏱️\n"
      ]
     }
    ],
@@ -1342,7 +1331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
